--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+body {
+    height:100vh; /*takes up 100% of the user's viewport height*/
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
 .square {
     width:25px;
     height:25px;
     background-color: aquamarine;
-    margin: 10px;
+    margin: 1px;
 }
 
 
@@ -13,4 +19,5 @@
 .col {
     display:flex;
     flex-direction: column;
+
 }
