--- a/style.css
+++ b/style.css
@@ -12,10 +12,12 @@ h5 {
 
 .options {
     display: flex;
+   
+    align-items: center;
 }
 .square {
-    width:25px;
-    height:25px;
+    flex: 1; 
+    aspect-ratio: 1 / 1; /* width / height */
     background-color: rgb(181, 181, 181);
     margin: 1px;
 }
@@ -29,5 +31,15 @@ h5 {
     display:flex;
     flex-direction: column;
     border: solid rgb(186, 168, 168) 15px;
+    width:700px;
+    height:700px;
+}
 
+#heading {
+    font-size: 40px;
+}
+
+.options-Bar {
+    display:flex;
+    justify-content: space-between;
 }
